Photos added, shopping api fix
